--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -50,7 +50,10 @@
           }          
         },
         "product": {
-          "dataSource": "productRemote"
+          "dataSource": "productRemote",
+          "settings": {
+            "defaultBindingMode": "TwoWay"
+          }
       }
 	  },
       "resources": {
